@@ -24,6 +24,7 @@ documents those changes that are of interest to users and administrators.
  -- Set state_reason if select_nodes() fails job for QOS or Account.
  -- Avoid seg_fault on referencing association without a valid_qos bitmap.
  -- If Association is removed on a pending job set that job as ineligible.
+ -- When changing a jobs account/qos always make sure you remove the old limits.
 
 * Changes in Slurm 18.08.6-2
 ============================
